# CSCI-381-Applied-Data-Science

./: Makefile  pyproject.toml
part1_uploading_and_processing_data/: instructions.md  main.py
part2_text_processing/: instructions.md  main.py
part3_numpy/: instructions.md  main.py
quiz1/: main.ipynb  main.py
quiz3/: main.ipynb
quiz4/: main.ipynb
quiz4/data/: HDMA Boston Housing Data.csv
