[project]
name = "assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pandas-stubs>=2.2.3.250527",
    "ruff>=0.11.13",
]
